[package]
name = "gs-slack-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
ft-api = { git = "https://github.com/hdoo42/ft-api.git" }
slack-morphism = { version = "2.3.2", features = ["hyper", "axum"] }
http = "1.1.0"
bytes = "1.6.0"
tokio = { version = "1.38.0", features = [
	"bytes",
	"rt-multi-thread",
	"signal",
	"tracing",
] }
axum = { version = "0.7.5", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }
http-body-util = { version = "0.1" }
hyper = { version = "1.3", features = ["http2", "server", "client"] }
url = "2.5.1"
serde = "1.0.203"
serde_plain = "1.0.2"
reqwest = "0.12.4"
rsb_derive = "0.5.1"
regex = "1.10.5"
chrono = "0.4.38"
